[tool.poetry]
name = "complex-if-else"
version = "0.1.0"
description = ""
authors = ["Tanay PrabhuDesai <tanayseven@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest-mock = "^3.1.1"
beautifulsoup4 = "^4.9.1"
pytest-watch = "^4.2.0"
pytest-cov = "^2.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
radon = "^4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
